# ai4esg_experiments

./: .env  .gitignore  Dockerfile  README.md  demo.env  docker-compose.yaml  entrypoint.sh  llama-cpp-config.json  pyproject.toml
backend/: alembic.ini  app_config.py  config.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0702d7d706bc_add_requirements_and_penalties.py  2d2fb4d829b0_add_new_models.py  2f915025137d_migration001.py  30b1a9fafb5f_added_doc_cascade.py  3ef828b08faf_added_evaluation_results.py  4f8ecc9dfb6c_update_model_options.py  713c2b8ec9bf_add_cascade_for_docs.py  7d304dd98081_new_models.py  90d718023088_add_annotation_tables.py  959c622cb128_add_cascade_for_answers.py  a487f4833b67_manage_embedding_doc_id.py  e94c3d08fc07_add_pgvector_for_embeddings.py
backend/db/: base.py  engine.py  setup.py
backend/evals/: squad_eval_script.py  torchmetrics_eval_script.py  utils.py
backend/modules/annotations/: models.py  schemas.py  service.py
backend/modules/answer/: models.py  schemas.py  service.py
backend/modules/document/: models.py  schemas.py  service.py
backend/modules/document/ingest/: esg_document_ingest.py
backend/modules/document/pydantic/: models.py
backend/modules/document/summary/: service.py
backend/modules/document/utils/: DocumentReader.py  DocumentReaderProviders.py  policyqa_parser.py  split_utils.py  token_utils.py
backend/modules/embedding/: models.py  schemas.py  service.py  utils.py
backend/modules/esg/applicability/: service.py
backend/modules/evaluation_result/: models.py  schemas.py  service.py
backend/modules/llm/: llm_infos.py  schemas.py  utils.py
backend/modules/llm/clients/: base.py  openai_client.py
backend/modules/llm/clients/open_source/: local_llm_client.py
backend/modules/llm/clients/openai/: azure_openai_client.py  openai_client.py  utils.py
backend/modules/llm/models/: base.py
backend/modules/penalty/: models.py  schemas.py  service.py
backend/modules/prompts/: applicability_evaluation_prompts.py  legal_info_extraction_prompts.py  summary_prompts.py
backend/modules/requirement/: models.py  schemas.py  service.py
data/: dev-small-ted.json  dev-small.json  test.json
experiments/: AI4ESG_experiments.ipynb  AI4ESG_single_chunk.ipynb  annotation_results_analysis.ipynb  backup_company_x_applicability_evaluation_results.json  company_x_applicability_evaluation_results.json  convert_to_tsv.ipynb  document_ingestion.ipynb  evaluate_hallucinations.ipynb  extract_regulations_given_parameters.ipynb  final_experiments.ipynb  generate_qas.ipynb  graphs.ipynb  import-models.ipynb  test.ipynb  (+8 more)
(+36 files in other folders)
